# param_pca

./: .gitignore  README.md  param_pca.py  pyproject.toml
example/: gtex_by_age.py
src/param_pca/: __init__.py  internals.py  param_pca.py
test/: test_p_values.py
