[build-system]
requires = ['setuptools>=65.0']
build-backend = "setuptools.build_meta"

[project]
name = "ParamPCA"
version = "0.1.0"
authors = [
  { name="Thomas Brooks" },
]
description = "ParamPCA: parameterized PCA regression"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tgbrooks/param_pca"